data/derived/fa15/progs/unify/prog2829.ml.out
Characters 58-59:
  let fixpoint (f,b) = wwhile (let n x = (f , b = f b) in n,b);;
                                                            ^
Error: This expression has type 'a but an expression was expected of type
         'a -> 'a
       The type variable 'a occurs inside 'a -> 'a
